--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>Town of West Jefferson</h1>
+				<p><h1>Water Resources</h1> <a href="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>.</p>
 			</header>
 
 		<!-- Signup Form -->
