--- a/ccr.html
+++ b/ccr.html
@@ -2,10 +2,24 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
 
-</body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+    </head>
+    <body>
+        <div id="adobe-dc-view"></div>
+        <script type="text/javascript">
+   document.addEventListener("adobe_dc_view_sdk.ready", function()
+   {
+       var adobeDCView = new AdobeDC.View({ clientId: "ab6405f0f0de4a2592bab00c188be10f", divId: "adobe-dc-view"});
+      adobeDCView.previewFile(
+     {
+              content: { location: { url: "https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">}},
+         metaData: {fileName: "2024 CCR.pdf"}
+     });
+   });
+        </script>
+
+
+    </body>
 </html>
