--- a/ccr.html
+++ b/ccr.html
@@ -7,18 +7,7 @@
     <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
     </head>
     <body>
-        <div id="adobe-dc-view"></div>
-        <script type="text/javascript">
-   document.addEventListener("adobe_dc_view_sdk.ready", function()
-   {
-       var adobeDCView = new AdobeDC.View({ clientId: "ab6405f0f0de4a2592bab00c188be10f", divId: "adobe-dc-view"});
-      adobeDCView.previewFile(
-     {
-              content: { location: { url: "https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">}},
-         metaData: {fileName: "2024 CCR.pdf"}
-     });
-   });
-        </script>
+    <iframe src="https://townofwj-my.sharepoint.com/personal/wwtp_townofwj_com/_layouts/15/embed.aspx?UniqueId=3463f6b8-ea33-4fce-9598-38f38a76d950" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="2024 CCR"></iframe>
 
 
     </body>
