--- a/ccr.html
+++ b/ccr.html
@@ -2,13 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
-    </head>
-    <body>
-    <iframe src="https://townofwj-my.sharepoint.com/personal/wwtp_townofwj_com/_layouts/15/embed.aspx?UniqueId=3463f6b8-ea33-4fce-9598-38f38a76d950" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="2024 CCR"></iframe>
-
-
-    </body>
+<meta charset="utf-8" />
+</head>
+<body>
+<p><div class="container-fluid">
+    <embed src="assets/files/2024 CCR.pdf" height="800" width="1800" />
+    </div></p>
+</body>
 </html>
