--- a/ccr.html
+++ b/ccr.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p><div class="container-fluid">
-    <embed src="assets/files/2024 CCR.pdf" height="800" width="1800" />
+    <embed src="assets/files/2024 CCR.pdf" height="800" width="100%" />
     </div></p>
 </body>
 </html>
