--- a/ccr.html
+++ b/ccr.html
@@ -3,10 +3,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body>
-<p><div class="container-fluid">
-    <embed src="assets/files/2024 CCR.pdf" height="800" width="100%" />
-    </div></p>
+<p><!--<object data="2024 CCR.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>-->
+    <embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%" />
+    </p>
 </body>
 </html>
