--- a/ccr.html
+++ b/ccr.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body>
-<p><!--<object data="2024 CCR.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>-->
-    <embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%" />
+<p><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
+    <!--<embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%" />-->
     </p>
 </body>
 </html>
