--- a/ccr.html
+++ b/ccr.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body>
-<p><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
+<p><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100%;width:100%"></object>
     <!--<embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%" />-->
     </p>
 </body>
