--- a/ccr.html
+++ b/ccr.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body>
-<p><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100%;width:100%"></object>
+<p><!--><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100%;width:100%"></object>-->
+<embed src="https://docs.google.com/viewer?embedded=true&url="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">
     <!--<embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%" />-->
     </p>
 </body>
