--- a/ccr2025.html
+++ b/ccr2025.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<object data="https://docs.google.com/viewer?embedded=true&url="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW"
+<object data="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW"
         type="application/pdf"
         width="100%"
         height="100%">
