--- a/ccr.html
+++ b/ccr.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p><!--><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100%;width:100%"></object>-->
-<embed src="https://docs.google.com/viewer?embedded=true&url="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">
+<embed src="https://docs.google.com/viewer?embedded=true&url="https://townofwj-my.sharepoint.com/:b:/p/wwtp/IQC49mM0M-rOT5WYOPOKdtlQAe7pjhs9izks04y9uI5EU0I?e=zghWWh"">
     <!--<embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%" />-->
     </p>
 </body>
