--- a/ccr.html
+++ b/ccr.html
@@ -8,7 +8,7 @@
 <body>
 <p><!--><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100%;width:100%"></object>-->
 <embed src="https://docs.google.com/viewer?embedded=true&url="https://townofwj-my.sharepoint.com/:b:/p/wwtp/IQC49mM0M-rOT5WYOPOKdtlQAe7pjhs9izks04y9uI5EU0I?e=zghWWh"">
-    <!--<embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%" />-->
+    <!--<embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%"></embed>-->
     </p>
 </body>
 </html>
