--- a/ccr2025.html
+++ b/ccr2025.html
@@ -1,11 +1,17 @@
 ﻿<!DOCTYPE html>
+<html>
+<head>
+    <title>PDF Webpage View</title>
+</head>
+<body>
 
-<object data="https://townofwj-my.sharepoint.com/:b:/p/wwtp/IQC49mM0M-rOT5WYOPOKdtlQAe7pjhs9izks04y9uI5EU0I?e=zghWWh"
-        type="application/pdf"
-        width="100%"
-        height="100%">
-    <p>
-        Your browser does not support PDFs. [Download the
-        PDF](https://example.com/test.pdf) .
-    </p>
-</object>
+    <h2>Viewing PDF via Iframe</h2>
+    <iframe src="https://townofwj-my.sharepoint.com/:b:/p/wwtp/IQC49mM0M-rOT5WYOPOKdtlQAe7pjhs9izks04y9uI5EU0I?e=zghWWh" width="100%" height="800px">
+        <p>
+            This browser does not support PDFs. Please download the PDF to view it:
+            <a href="your-file-path.pdf">Download PDF</a>.
+        </p>
+    </iframe>
+
+</body>
+</html>
