--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<p><h1>Water Resources</h1><br />
 				<!--<a href="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
 				<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>
-				<a href="ccr2025.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR2025</a>
+				<a href="ccr2025.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/IQC49mM0M-rOT5WYOPOKdtlQAe7pjhs9izks04y9uI5EU0I?e=zghWWh">CCR2025</a>
 				</p>
 			</header>
 
