--- a/ccr2025.html
+++ b/ccr2025.html
@@ -6,7 +6,7 @@
 <body>
 
     <h2>Viewing PDF via Iframe</h2>
-    <iframe src="https://townofwj-my.sharepoint.com/:b:/p/wwtp/IQC49mM0M-rOT5WYOPOKdtlQAe7pjhs9izks04y9uI5EU0I?e=kRyusD" width="100%" height="800px">
+    <iframe src="https://townofwj-my.sharepoint.com/my?id=%2Fpersonal%2Fwwtp%5Ftownofwj%5Fcom%2FDocuments%2FWater%2F2025%2F2024%20CCR%2Epdf&parent=%2Fpersonal%2Fwwtp%5Ftownofwj%5Fcom%2FDocuments%2FWater%2F2025&ga=1" width="100%" height="800px">
         <p>
             This browser does not support PDFs. Please download the PDF to view it:
             <a href="your-file-path.pdf">Download PDF</a>.
