--- a/ccr2025.html
+++ b/ccr2025.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 
-    <h2>Viewing PDF via Iframe</h2>
     <iframe src="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf" width="100%" height="800px">
         <p>
             This browser does not support PDFs. Please download the PDF to view it:
-            <a href="your-file-path.pdf">Download PDF</a>.
+            <a href="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf"</a>.
         </p>
     </iframe>
 
