--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 				<h1>Town of West Jefferson</h1>
 				<p><h1>Water Resources</h1><br />
 				<!--<a href="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
-				<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>
-				<a href="ccr2025.html">CCR2025</a>
+				<!--<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
+				<a href="ccr2025.html">Consumer Confidence Report 2025</a>
+				<a href="wastewater">Wastewater Report 2025</a>
 				</p>
 			</header>
 
 		<!-- Signup Form -->
 			
 
-		<!-- Footer -->
+		<!-- Footer 
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -34,10 +35,8 @@
 					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
+				
+			</footer>-->
 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
