--- a/ccr.html
+++ b/ccr.html
@@ -1,15 +1,16 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=10, user-scalable=no" />
+    <title>PDF Webpage View</title>
 </head>
 <body>
-<p><!--><object data="2024 CCR.pdf" type="application/pdf" style="min-height:100%;width:100%"></object>-->
-<embed src="https://docs.google.com/viewer?embedded=true&url="https://townofwj-my.sharepoint.com/:b:/p/wwtp/IQC49mM0M-rOT5WYOPOKdtlQAe7pjhs9izks04y9uI5EU0I?e=zghWWh"">
-    <!--<embed src="assets/files/2024 CCR.pdf" style="min-height:100vh;width:100%"></embed>-->
-    </p>
+
+    <iframe src="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf" width="100%" height="800px">
+        <p>
+            This browser does not support PDFs. Please download the PDF to view it:
+            <a href="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf"</a>.
+        </p>
+    </iframe>
+
 </body>
-</html>
 </html>
