--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 				<h1>Town of West Jefferson</h1>
 				<p><h1>Water Resources</h1><br />
 				<!--<a href="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
-				<!--<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
-				<a href="ccr2025.html">Consumer Confidence Report 2025</a>
-				<a href="wastewater">Wastewater Report 2025</a>
-				</p>
+				<!--<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>--></p>
+				<p><a href="ccr.html">Consumer Confidence Report 2025</a></p>
+				<p><a href="wastewater">Wastewater Report 2025</a></p>
 			</header>
 
 		<!-- Signup Form -->
