--- a/wastewater1.html
+++ b/wastewater1.html
@@ -1,4 +1,4 @@
-﻿<iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/ncbrandon/wjwater/main/2024%20CCR.pdf"
+﻿<iframe src="https://https//mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/ncbrandon/wjwater/master/2024%20CCR.pdf"
         width="100%"
         height="800px"
         style="border: none;">
