--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				<!--<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
 			</p>
 			<p><a href="ccr.html">Consumer Confidence Report 2025</a></p>
-			<p><a href="wastewater">Wastewater Report 2025</a></p>
-			<p><a href="wastewater1">Wastewater Report 2026</a></p>
+			<p><a href="wastewater.html">Wastewater Report 2025</a></p>
+			<p><a href="wastewater1.html">Wastewater Report 2026</a></p>
 		</header>
 
 		<!-- Signup Form -->
