--- a/wastewater1.html
+++ b/wastewater1.html
@@ -1,5 +1,11 @@
-﻿<iframe src="https://https//mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/ncbrandon/wjwater/master/2024%20CCR.pdf"
-        width="100%"
-        height="800px"
-        style="border: none;">
-</iframe>
+﻿<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>PDF.js viewer (encoded file param)</title>
+</head>
+<body>
+    <iframe id="pdfViewer" width="100%" height="800" style="border:none;"></iframe>
+    <script>// Immutable (recommended) raw GitHub URL to your PDF const fileUrl = 'https://raw.githubusercontent.com/ncbrandon/wjwater/9c45501f793e9b4fa41558016accfd6d5f6e2ee2/2024 CCR.pdf'; // Encode the entire file URL as the file parameter const viewerBase = 'https://mozilla.github.io/pdf.js/web/viewer.html?file='; const viewerUrl = viewerBase + encodeURIComponent(fileUrl); // Set iframe src document.getElementById('pdfViewer').src = viewerUrl;</script>
+</body>
+</html>
