--- a/ccr.html
+++ b/ccr.html
@@ -1,16 +1,24 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>PDF Webpage View</title>
+    <meta charset="utf-8">
+    <title>2024 CCR Report</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+        }
+    </style>
 </head>
 <body>
 
-    <iframe src="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf" width="100%" height="800px">
-        <p>
-            This browser does not support PDFs. Please download the PDF to view it:
-            <a href="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf"</a>.
-        </p>
-    </iframe>
+    <iframe src="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/ncbrandon/wjwater/master/2024%20CCR.pdf&embedded=true"></iframe>
 
 </body>
 </html>
