--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Town of West Jefferson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,32 +16,68 @@
 		<!-- Header -->
 		<header id="header">
 			<h1>Town of West Jefferson</h1>
-			<p>
-				<h1>Water Resources</h1><br />
-				<!--<a href="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
-				<!--<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
-			</p>
-			<p><a href="ccr.html">Consumer Confidence Report 2025</a></p>
-			<p><a href="wastewater.html">Wastewater Report 2025</a></p>
-			<p><a href="wastewater1.html">Wastewater Report 2026</a></p>
+			<p class="meta">Water Resources</p>
+		</header>
+
+		<style>
+			/* container */
+			#header {
+				display: flex;
+				align-items: center;
+				justify-content: space-between; /* h1 left, p right */
+				gap: 0.5rem;
+				padding: 0.5rem 1rem;
+			}
+
+				/* make flex children respect overflow clipping */
+				#header > * {
+					min-width: 0;
+					margin: 0;
+				}
+
+				/* prevent wrapping and enable ellipsis if space is tight */
+				#header h1,
+				#header .meta {
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
+
+				/* responsive font sizes: h1 scales between 18px and 28px depending on viewport */
+				#header h1 {
+					font-size: clamp(18px, 4.5vw, 28px);
+					font-weight: 600;
+					flex: 0 1 auto; /* allow it to shrink a bit */
+				}
+
+				/* meta text a bit smaller; allow it to shrink more if needed */
+				#header .meta {
+					font-size: clamp(12px, 3.2vw, 14px);
+					color: #666;
+					flex: 0 0 auto; /* keep it from stretching; it will ellipsize */
+				}
+		</style><br />
+		<!--<a href="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
+		<!--<a href="ccr.html" target="https://townofwj-my.sharepoint.com/:b:/p/wwtp/Ebj2YzQz6s5PlZg484p22VAB7umOGz2LOSzTjL24jkRTQg?e=G0aksW">CCR</a>-->
+		</p>
+		<p><a href="ccr.html">Consumer Confidence Report 2025</a></p>
+		<p><a href="wastewater.html">Wastewater Report 2025</a></p>
+		<p><a href="wastewater1.html">Wastewater Report 2026</a></p>
 		</header>
 
 		<!-- Signup Form -->
-			
+		<!-- Footer
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
 
-		<!-- Footer 
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				
-			</footer>-->
-
+		</footer>-->
 		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
