--- a/wwtp.html
+++ b/wwtp.html
@@ -29,14 +29,14 @@
 </head>
 <body>
 
-    <iframe src="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf">
+    <iframe src="https://ncbrandon.github.io/wjwater/Annual%20Report%20Trifold%202025.pdf">
         <p>
             This browser does not support PDFs.
-            <a href="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf">Download the PDF</a>.
+            <a href="https://ncbrandon.github.io/wjwater/Annual%20Report%20Trifold%202025">Download the PDF</a>.
         </p>
     </iframe>
 
-    <a href="https://ncbrandon.github.io/wjwater/2024%20CCR.pdf" class="footer-link" download>Download PDF File</a>
+    <a href="https://ncbrandon.github.io/wjwater/Annual%20Report%20Trifold%202025.pdf" class="footer-link" download>Download PDF File</a>
 
 </body>
 </html>
